fixing navbar alignment

--- a/hw3/styles.css
+++ b/hw3/styles.css
@@ -34,7 +34,7 @@ body {
 
 .navbar .links {
   /* border: 2px solid black; */
-  margin-right: 30px;
+  margin-right: 40px;
   margin-left: auto;
   display: flex;
   justify-content: center;
